fixed shape and spacing of appointment cards

--- a/WebApps/Flask/BarbershopDashboard/WebApp/static/css/style.css
+++ b/WebApps/Flask/BarbershopDashboard/WebApp/static/css/style.css
@@ -12,3 +12,43 @@
     --bg:#B6FF79;
     background-color: #B6FF79;
 }
+
+.appt_card {
+    border-radius: 8px;
+    background-color: greenyellow;
+    display: flex;
+    height: 95%;
+    width: 100%;
+    justify-content: center;  /* centers the div text horizontally */
+    font-weight: bold;
+    align-items: center; /* centers the div text vertically */
+}
+
+.sch_header {
+    text-align: center;
+    align-self: center;
+    height:100%; 
+}
+
+tr td {
+    height: 50px;
+    padding: 0%;
+}
+
+td { 
+    border-left: 1px solid #4B0082;
+    border-right: 1px solid #4B0082;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th {
+    height: 100%;
+    width: 100px;
+    padding: 0%;
+    border-left: 1px solid #4B0082;
+    border-right: 1px solid #4B0082;
+    border-bottom: 1px solid #4B0082;
+}
